--- a/src/globals.css
+++ b/src/globals.css
@@ -1,9 +1,57 @@
+@font-face {
+  font-family: 'Saprona';
+  src: url('/fonts.1/Saprona-Regular.woff2') format('woff2'),
+       url('/fonts.1/Saprona-Regular.woff') format('woff'),
+       url('/fonts.1/Saprona-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
+@font-face {
+  font-family: 'Saprona';
+  src: url('/fonts.1/Saprona-Medium.woff2') format('woff2'),
+       url('/fonts.1/Saprona-Medium.woff') format('woff'),
+       url('/fonts.1/Saprona-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Saprona';
+  src: url('/fonts.1/Saprona-SemiBold.woff2') format('woff2'),
+       url('/fonts.1/Saprona-SemiBold.woff') format('woff'),
+       url('/fonts.1/Saprona-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Saprona';
+  src: url('/fonts.1/Saprona-Bold.woff2') format('woff2'),
+       url('/fonts.1/Saprona-Bold.woff') format('woff'),
+       url('/fonts.1/Saprona-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Saprona';
+  src: url('/fonts.1/Saprona-Black.woff2') format('woff2'),
+       url('/fonts.1/Saprona-Black.woff') format('woff'),
+       url('/fonts.1/Saprona-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 body{
-  font-family: "Outfit", sans-serif;
+  font-family: "Saprona", sans-serif; /* Changed to Saprona */
   font-optical-sizing: auto;
-  font-weight: 300;
+  font-weight: 400; /* Default to regular weight */
   font-style: normal;
 }
 
